fix z-index

--- a/app/web/asset/css/module/header.css
+++ b/app/web/asset/css/module/header.css
@@ -4,6 +4,7 @@
   max-width: 1600px;
   margin: 0 auto;
   padding: 0 80px;
+  z-index: 0;
 }
 .headerRow a {
   font-size: 16px;
@@ -23,10 +24,6 @@
 
 .drawerCol {
   text-align: right;
-}
-.memuBtn {
-  background-color: transparent;
-  color: #000 !important;
 }
 
 .drawerCol :global(.ant-btn) {
